45
================

03/11/21 Option to register any microchip with AKC Reunite
02/11/21 Check town/city when filtering waiting list by address
31/10/21 account ID->cost/payment type link wrong way around #293
29/10/21 Add new revXX token to repository reports and auto update #721
28/10/21 Add "Selective" option to good with/housetrained fields #803
28/10/21 Validate against empty usage dates when creating stock levels
28/10/21 Include email subject in log when sending from media tab
27/10/21 Stop using autoreload in production for performance reasons
27/10/21 Rename "Live Releases" to "Live Outcomes" for clarity
27/10/21 Drop html_adoptable_animals cache time to 10 minutes
26/10/21 Focus first field in report criteria, submit with return in input
26/10/21 Upgrade to web.py 0.62 and include with codebase
25/10/21 Bundle web.py due to different broken versions shipping with distros
23/10/21 Mark photos from online forms as exclude from publish by default
20/10/21 Record IP address with online form submissions
20/10/21 underweeks/overweeks parameters to service html_adoptable_animals
18/10/21 Blank Manufacturer/Batch when rescheduling vacc
17/10/21 Allow old HTML/FTP publisher to be disabled via sitedef #1040
17/10/21 Remove complicated smcom-specific HTML/FTP override code #1040
17/10/21 Add warn when adopting to a banned address #1054
15/10/21 When checking current owner, fosters are exit if option not set
14/10/21 If species is different, fail lost/found match altogether
12/10/21 cron tasks not adjusting for dst
12/10/21 Autoprocess attach->create should still create if attach fails
10/10/21 Petcademy: now require encryption and named folder
08/10/21 Output text when adoptable_js has no results #1052
07/10/21 PetLink: temp fix for issues with quoted line breaks in CSV
06/10/21 Include european field names in online form autofill
05/10/21 Completed filter for find incident
01/10/21 Do not include permanent fosters in long term animal alerts