@@ -1,6 +1,7 @@
 45
 ================
 
+04/11/21 Truncate email subject header to 78 chars for compatibility
 03/11/21 Option to register any microchip with AKC Reunite
 02/11/21 Check town/city when filtering waiting list by address
 31/10/21 account ID->cost/payment type link wrong way around #293
